--- a/package.json
+++ b/package.json
@@ -181,7 +181,7 @@
     "cross-spawn": "^6.0.5",
     "css-loader": "^2.1.1",
     "detect-port": "^1.3.0",
-    "electron": ">=7.2.4",
+    "electron": "7.2.4",
     "electron-builder": "^20.39.0",
     "electron-devtools-installer": "^2.2.4",
     "enzyme": "^3.9.0",
@@ -221,7 +221,7 @@
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.1",
-    "spectron": "^7.0.0",
+    "spectron": "^9.0.0",
     "style-loader": "^0.23.1",
     "stylelint": "^13.3.3",
     "stylelint-config-prettier": "^5.0.0",
