--- a/package.json
+++ b/package.json
@@ -182,7 +182,7 @@
     "css-loader": "^2.1.1",
     "detect-port": "^1.3.0",
     "electron": "7.2.4",
-    "electron-builder": "^20.39.0",
+    "electron-builder": "^21.2.0",
     "electron-devtools-installer": "^2.2.4",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
@@ -274,5 +274,8 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "resolutions": {
+    "update-notifier": "4.1.0"
   }
 }
